attempt to fix font issues on mobile

--- a/mythos/static/mythos.css
+++ b/mythos/static/mythos.css
@@ -65,7 +65,6 @@ a:hover
 
 .index-td
 {
-	font-size:16px;
 	font-weight: lighter;
 	text-shadow:0px 1px 1px rgba(0,0,0,0.5);
 }
@@ -78,7 +77,6 @@ a:hover
 .index-th
 {
 	color: #FFF;
-	font-size:16px;
 	font-weight:bold;
 	text-shadow:0px 1px 1px rgba(0,0,0,0.75);
 }
